# birds

./: .env  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  capture.py  cfg-finetune.yaml  cfg.yaml  compose.yml  custom_tune.def  docker-compose-inference.yml  docker-compose.yml  email-and-upload.sh  email-lists.csv  preprocess-classification-data.py  pyproject.toml  send_birb_summary.py  send_email.py  send_email_from_csv.py  stack_sample_images.py  start-streams.sh  yolov8m-birbs.pt  yolov8m-cls-birbs.pt
birdector/: extract_birbs.py  post_process.py  send_birb_summary.py  send_email.py  stack_gifs.py
birdector/config/: __init__.py  classes.toml
birdector/post_process/: __init__.py  find_best_vids.py  send_birb_summary.py
birdector/rknn/: __init__.py
birdector/rknn_yolov5/: __init__.py  _interface.py
birdector/utils/: rknpu_exporter.py
cfg/: grafana.json  init.sql  prometheus.yml
docker/ffmpeg/: Dockerfile
docker/rtmp-server/: Dockerfile  nginx.conf
docker/yolo/: Dockerfile  environment.yml
models/: anchors.txt  yolov10-birbs.pt  yolov11-birbs.pt  yolov5-birbs.rknn  yolov8-birbs.pt  yolov8-cls-birbs.pt  yolov9-birbs.pt
nf/: cron.sh  main.nf  nextflow.config
nf/conf/: wehi.config
nf/modules/: email.nf  ffmpeg.nf  rclone.nf  yolo.nf
nf/singularity/: pillow.def
scripts/: anchors.txt  augment-data.py  capture.py  email-and-upload.sh  extract-birbs.py  find-best-vids.py  find_best_vids.py  parse-instances.py  parse_instances.py  post-process.py  preprocess-classification-data.py  record.sh  remove-old.sh  rknn_yolo11.py  rknn_yolov5.py  rknpu-exporter.py  roboflow-download.sh  run-finetune.sh  run-train.sh  run-tune.sh  send_birb_summary.py  send_email.py  stack-gifs.py  stack_gifs.py  stack_sample_images.py  yolo-export.sh
src/utils/: CMakeLists.txt  file_utils.c  file_utils.h  image_utils.c  image_utils.h
src/yolov5/: CMakeLists.txt  main.cc  postprocess.cc  postprocess.h  yolov5.cc  yolov5.h
utils/: clean-old.sh  docker-entrypoint.sh  post-process.sh  record.sh  roboflow-download.sh  run-train.sh  run-tune.sh
