[project]
name = "birdector"
version = "0.1.0"
dependencies = [
    "torch",
    "torchvision",
    "rknn-toolkit2",
    "pandas",
    "flask",
    "prometheus_client"
]
requires-python = ">= 3.9"
authors = [
    {name = "Edward Yang", email = "edward_yang_125@hotmail.com"},
]
description = "A package for detecting birds on an RK3588 chip"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Repository = "https://github.com/edoyango/birds.git"
Issues = "https://github.com/edoyango/birds/issues"

[project.scripts]
extract-birbs = "birdector.extract_birbs:main"
rknpu-exporter = "birdector.utils.rknpu_exporter:main"
post-process = "birdector.post_process:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/birdet"
]