[project]
name = "birdector"
version = "0.2.4"
dependencies = [
    "torch",
    "torchvision",
    "rknn-toolkit2==2.3.0",
    "pandas",
    "flask",
    "prometheus_client",
    "toml"
]
requires-python = ">= 3.9"
authors = [
    {name = "Edward Yang", email = "edward_yang_125@hotmail.com"},
]
description = "A package for detecting birds on an RK3588 chip"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Repository = "https://github.com/edoyango/birds.git"
Issues = "https://github.com/edoyango/birds/issues"

[project.scripts]
extract-birbs = "birdector.extract_birbs:main"
rknpu-exporter = "birdector.utils.rknpu_exporter:main"
post-process = "birdector.post_process:main"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
cmake.source-dir = "src/yolov5"

cmake.args = [
"-DTARGET_SOC=rk3588",
"-DCMAKE_SYSTEM_NAME=Linux",
"-DCMAKE_SYSTEM_PROCESSOR=aarch64",
"-DCMAKE_BUILD_TYPE=Release",
"-DENABLE_ASAN=OFF",
"-DDISABLE_RGA=OFF",
"-DCMAKE_CXX_FLAGS=-O2 -march=native -mtune=native",
"-DCMAKE_C_FLAGS=-O2 -march=native -mtune=native"]
